--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 :root {
   /* Colors */
   /* General */
+  --blue-cethi: #265984;
 
   /* HMI */
   --frame: #0A0A0A;
@@ -22,7 +23,7 @@
   --active-buttons: #111120;
 
   /* Fonts */
-  --main-title-font : nasalization, sans-serif;
+  --brand-font : nasalization, sans-serif;
   --accent-font: "Montagu Slab", serif;
   --base-font: figtree, sans-serif;
   --hmi-font: obvia, sans-serif;
@@ -36,6 +37,7 @@
   --fs-22: 1.375rem;
   --fs-24: 1.5rem;
   --fs-26: 1.625rem;
+  --fs-32: 2rem;
   --fs-40: 2.5rem;
   --fs-42: 2.625rem;
   --fs-64: 4rem;
@@ -53,143 +55,104 @@
 }
 
 /* Global & utilities */
-/* Navigation */
+body {
+  font-family: var(--base-font);
+}
+
 /* Header */
-/* Search */
-/* Shortcuts */
+header {
+  height: 100px;
+  border-bottom: 5px solid var(--blue-cethi);
+  padding: 25px 0;
+  margin-bottom: 50px;
+}
+header h1 {
+  font-size: var(--fs-42);
+  color: var(--blue-cethi);
+  text-align: center;
+}
+@media (max-width: 768px) {
+  header {
+    height: 75px;
+    padding: 20px 0;
+    margin-bottom: 0px;
+  }
+  header h1 {
+    font-size: var(--fs-32);
+  }
+}
+
 /* Discorver */
-/* Informations */
+.discover{
+  width: 396px;
+  margin: 0 auto;
+  padding: 83px 0;
+  border-radius : 50% 50% 50% 50% / 11% 11% 11% 11%;
+  background-color: var(--frame);
+}
+.display {
+  width: 180px;
+  height: 233px;
+  margin: 0 auto 55px;
+  background-color: var(--display-off);
+  border-radius: 3px;
 
+  /* Texte dans l'écran */
+  color: var(--buttons-text);
+  font-family: var(--hmi-font);
+}
+.keyboard {
+  width: 295px;
+  height: 305px;
+  margin: 0 auto;
+  border-radius : 50% 50% 50% 50% / 25% 25% 25% 25%;
+  background-color: var(--keyboard);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  justify-items: center;
+  align-items: center;
+}
+.btn{
+  width: 63px;
+  height: 63px;
+  background-color: var(--buttons);
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 15px;
 
-/* Tests */
-h1 {
-    font-family: var(--base-font);
-    background-color: lightgray;
-    max-width: 400px;
-    border-radius: 999px;
-    text-align: center;
-    padding: 15px;
-    margin: 0 auto;
-    border: 1px solid darkgray;
-    font-size: var(--fs-42);
+  /* Si les bouton ont des textes */
+  color: var(--buttons-text);
 }
-h2 {
-    font-family: var(--accent-font);
-    font-size: var(--fs-18);
-    margin: 0 auto;
-    max-width: 400px;
-    text-align: right;
-    padding: 0;
-    transform: translate(-10%, -65%);
-    position: relative;
+.btn:hover {
+  outline: 2px solid var(--buttons-text);
 }
-h2 span {
-    font-family: var(--main-title-font);
+.btn-up {
+  grid-column: 2 / 3;
+  grid-row: 1;
 }
-main{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 80vh;
+.btn-back {
+  grid-column: 1 / 2;
+  grid-row: 2;
 }
-.hmi-tools, .hmi-informations {
-    width: 20%;
+.btn-ok {
+  width: 80px;
+  height: 80px;
+  grid-column: 2 / 3;
+  grid-row: 2;
 }
-.hmi-container {
-    width: 40%;
+.btn-menu {
+  grid-column: 3 / 3;
+  grid-row: 2;
 }
-section {
-    background-color: lightgray;
-    min-height: 100%;
+.btn-down {
+  grid-column: 2 / 3;
+  grid-row: 3;
 }
-.discover {
-    /* Utiliser les pseudo element before et after pour shape la bonne forme.*/
-    background: #0A0A0A;
-    height: 600px;
-    width: 320px;
-    margin: 0 auto;
-    border-radius : 50% 50% 50% 50% / 11% 11% 11% 11%;
-    padding-top: 80px;
+@media (max-width: 768px) {
+  .discover{
+    /* Faire en sorte que ça ne créer pas une marge bidon  */
+    scale: 75%;
   }
-  .display {
-    background: #75756C;
-    width: 160px;
-    height: 200px;
-    margin: 0 auto;
-    margin-bottom: 40px;
-    padding: 4px;
-  }
-  .keyboard{
-    background: #202020;
-    /*background: white;*/
-    margin: 0 auto;
-    width: 225px;
-    height: 300px;
-    border-radius : 50% 50% 50% 50% / 11% 11% 11% 11%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    justify-items: center;
-    align-items: center;
-      
-  }
-  .btn {
-    border: none;
-    outline: none;
-    width : 60px;
-    height: 60px;
-    background:  #111120;
-    color: #F5F5F5;
-    border-radius: 10px;
-    font-size: 1.5em;
-    text-transform: uppercase;
-    cursor: pointer;
-  }
-  .btn-up {
-    grid-column: 2 / 3;
-    grid-row: 1;
-  }
-  .btn-back {
-    grid-column: 1 / 2;
-    grid-row: 2;
-  }
-  .btn-ok {
-    grid-column: 2 / 3;
-    grid-row: 2;
-    width : 80px;
-    height: 80px;
-  }
-  .btn-menu {
-    grid-column: 3 / 3;
-    grid-row: 2;
-  }
-  .btn-down {
-    grid-column: 2 / 3;
-    grid-row: 3;
-  }
-  .btn:hover {
-    outline: 2px solid white;
-  }
-  .btn:onclick, .btn:focus {
-    outline: 2px solid red;
-  }
-  
-  .display h2 {
-    text-align: center;
-    /* Couleur a trouvé */
-    background: #4d556f ;
-    font-size: 1.2em;
-    margin-top: 0;
-  }
-  .menu-list li {
-    list-style-type: none;
-    font-size: 1.2em;
-    padding: 2px 0;
-  }
-  .menu-list li:not(:last-of-type){
-    border-bottom: 2px solid white;
-  }
-  ul {
-    background: green;
-    text-align: left;
-  }
+}
