--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ header h1 {
   header {
     padding: 5px 0;
     border-bottom: 4px solid var(--blue-cethi);
+    margin-bottom: 25px;
   }
   header h1 {
     font-size: var(--fs-26);
@@ -196,7 +197,7 @@ header h1 {
     width: 100px;
     height: 132px;
     margin: 0 auto 31px;
-    font-size: var(--fs-14);
+    font-size: var(--fs-12);
   }
   .keyboard {
     max-width: 166px;
