--- a/style.css
+++ b/style.css
@@ -115,24 +115,32 @@ header h1 {
   font-size: var(--fs-20);
   padding: 2px;
 }
+/* HOME */
+.water-drop {
+  margin-top: 5%;
+  width: 75%;
+}
+/* MENU */
 .menu-title {
   font-weight: 500;
   font-size: var(--fs-20);
   padding: 2px;
   background-color: var(--title-background-color);
 }
-.menu-element, .menu-element-empty{
-  list-style-type: none;
+.menu-item {
   font-size: var(--fs-20);
   padding: 4px 2px;
   font-weight: 200 ;
 }
-.menu-element:nth-child(3){
+.menu-item.menu-item-full:not(:last-of-type) {
+  border-bottom: 1px solid var(--white);
+}
+.menu-item.menu-item-empty {
+  height: 33px;
+}
+.menu-item:nth-child(3){
   background-color: var(--white);
   color: var(--black);
-}
-.menu-element:not(:last-of-type){
-  border-bottom: 1px solid var(--white);
 }
 .keyboard {
   max-width: 295px;
@@ -217,9 +225,15 @@ header h1 {
     font-weight: 400;
     font-size: var(--fs-14);
   }
-  .menu-element{
+  .menu-item{
     font-size: var(--fs-14);
     padding: 2px 2px;
+  }
+  .menu-item.menu-item-empty {
+    height: 22px;
+  }
+  .water-drop {
+    width: 70%;
   }
 }
 @media (max-width: 320px) {
@@ -252,13 +266,15 @@ header h1 {
     font-weight: 200;
     font-size: var(--fs-11);
   }
-  .menu-element{
+  .menu-item{
     font-size: var(--fs-11);
     padding: 1.5px 2px;
     font-weight: 100;
   }
-}
-.water-drop {
-  margin-top: 5%;
-  width: 75%;
+  .menu-item.menu-item-empty {
+    height: 17px;
+  }
+  .water-drop {
+    width: 65%;
+  }
 }
